# genome-graph-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: error.rs  lib.rs  types.rs
src/generic/: mod.rs
src/io/: bcalm2.rs  mod.rs
src/io/bcalm2/: error.rs  mod.rs
src/io/fasta/: error.rs  mod.rs
src/io/gfa/: error.rs  mod.rs
src/io/wtdbg2/: dot.rs  error.rs  mod.rs
src/io/wtdbg2/dot/: error.rs
