[package]
name = "genome-graph"
description = "Representation of genome graphs"
version = "3.0.0"
authors = ["Sebastian Schmidt <isibboi@gmail.com>"]
edition = "2021"
categories = ["data-structures", "science"]
keywords = ["genome", "representation", "graph", "bioinformatics"]
homepage = "https://github.com/sebschmi/genome-graph"
documentation = "https://docs.rs/genome-graph"
repository = "https://github.com/sebschmi/genome-graph"
readme = "README.md"
license = "BSD-2-Clause"
rust-version = "1.58.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigraph = "2.0.0"
compact-genome = "1.2.0"
traitgraph-algo = {version = "5.0.0", optional = true}
num-traits = "0.2.14"
bio = "0.41.0"
error-chain = "0.12.4"
log = "0.4.14"
regex = "1.5.4"
anyhow = "1.0.53"
disjoint-sets = "0.4.2"
