[package]
name = "genome-graph"
description = "Representation of genome graphs"
version = "10.0.0"
authors = ["Sebastian Schmidt <isibboi@gmail.com>"]
edition = "2021"
categories = ["data-structures", "science"]
keywords = ["genome", "representation", "graph", "bioinformatics"]
homepage = "https://github.com/sebschmi/genome-graph"
documentation = "https://docs.rs/genome-graph"
repository = "https://github.com/sebschmi/genome-graph"
readme = "README.md"
license = "BSD-2-Clause"
rust-version = "1.80.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigraph = "5.0.1"
compact-genome = "12.0.1"
traitgraph-algo = { version = "8.1.2", optional = true }
num-traits = "0.2.19"
bio = "2.0.3"
log = "0.4.22"
regex = "1.10.6"
anyhow = "1.0.89"
disjoint-sets = "0.4.2"
thiserror = "2.0.11"
